--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <section>
         <h2>Tic Tac Toe</h2>
-        <p id="compteur"> za</p>
-        <span id="result"> </span>
+        <p id="compteur"></p>
+        <span id="result"></span>
         <div id="box">
             <div onclick="play(0)"></div>
             <div onclick="play(1)"></div>
